rename images and provide mixed tomcat/java images